cdebconf (0.82) UNRELEASED; urgency=low

  * Simplify strchoicesplit() slightly.
  * Use (char *) 0 as the sentinel to strvacat(), not just 0; this makes a
    difference on some 64-bit systems.

 -- Colin Watson <cjwatson@debian.org>  Sun, 10 Jul 2005 11:49:01 +0100

cdebconf (0.81) unstable; urgency=low

  * Colin Watson
    - When building the slang frontend against slang2, enable UTF-8
      according to the locale.
    - Add a continue button to string and password questions in the newt
      frontend, although you can still just press Enter in the text entry
      box (closes: #257969).
    - Document <Tab>, <Space>, and <Enter> in a help line for the newt
      frontend (closes: #247233).
    - Do much less work in the frontend's SIGCHLD handler; instead, just
      tell confmodule_communicate() to return at the next opportunity. This
      is only a quick patch to sort out hangs with Linux 2.6.12 on (at
      least) amd64, and cdebconf's signal handling needs a total revamp.
  * Updated translations:
    - Catalan (ca.po) by Guillem Jover
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - French (fr.po) by Christian Perrier
    - Portuguese (pt.po) by Miguel Figueiredo

 -- Colin Watson <cjwatson@debian.org>  Thu, 30 Jun 2005 19:26:46 +0100

cdebconf (0.80) unstable; urgency=low

  * Colin Watson
    - Stop hardcoding configdb and templatedb in stack database
      initialisation.
    - Use question_db_new instance parameter in debconf-copydb and
      debconf-dumpdb rather than messing with the DEBCONF_CONFIG environment
      variable.
    - Constify question_db_new instance parameter.
    - If DEBCONF_NO_I18N=1 is set in the environment, ignore localised
      fields in templates. This is a hack to let debconf-copydb and
      debconf-dumpdb work with template databases produced by debconf.
    - Look at config::instance::*::template to find out which template
      database to use when reading a given config database (which makes a