@@ -3,6 +3,8 @@ cdebconf (0.82) UNRELEASED; urgency=low
   * Simplify strchoicesplit() slightly.
   * Use (char *) 0 as the sentinel to strvacat(), not just 0; this makes a
     difference on some 64-bit systems.
+  * Perform printf format string (requires gcc) and sentinel (requires gcc
+    >= 4) checking on various function arguments.
 
  -- Colin Watson <cjwatson@debian.org>  Sun, 10 Jul 2005 11:49:01 +0100
 
